--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
 <header><AluraFlix</header>
+<section>
 <div>
     <h1>Através do aranhaverso supera o primeiro filme?</h1>
     <p>#Homem-aranha</p>
 </div>
+<div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/W1d7wGAG4IQ?si=5Kb5reKsz2WfkVju" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div>
+</section>
 </Body>
 </html>
