--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 <div>
 </section>
 <h2>lista de vídeos</h2>
+<div>
+    <a href="https://www.youtube.com/watch?v=tbQmx58VZAo">
+    <img src="https://img.youtube.com/vi/tbQmx58VZAo/maxresdefault.jpg"/>
+    <a href="https://www.youtube.com/watch?v=6FVulnc4poc">
+    <img src="https://img.youtube.com/vi/6FVulnc4poc/maxresdefault.jpg"/>
+    <a href="https://www.youtube.com/watch?v=d1yNc9skssk">
+    <img src="https://img.youtube.com/vi/d1yNc9skssk/maxresdefault.jpg"/>
+    <a href="https://www.youtube.com/watch?v=1Cs5gg-1kYg">
+    <img src="https://img.youtube.com/vi/1Cs5gg-1kYg/maxresdefault.jpg"/>
+    <a href="https://www.youtube.com/watch?v=Qu9Tyj3P_dQ">
+    <img src="https://img.youtube.com/vi/Qu9Tyj3P_dQ/maxresdefault.jpg"
+    </a>
+</div>
 <div class="categoria-vídeos">
     #videos aqui
 </div>
