--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <header><AluraFlix</header>
-<section>
-<div>
+<section class="chamada">
+<div class="chamada-texto">
     <h1>Através do aranhaverso supera o primeiro filme?</h1>
     <p>#Homem-aranha</p>
 </div>
