--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/W1d7wGAG4IQ?si=5Kb5reKsz2WfkVju" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <div>
 </section>
+
+<section class="categoria">
 <h2>lista de vídeos</h2>
-<div>
+
+ <div class="categoria-vídeos"> 
     <a href="https://www.youtube.com/watch?v=tbQmx58VZAo">
     <img src="https://img.youtube.com/vi/tbQmx58VZAo/maxresdefault.jpg"/>
     <a href="https://www.youtube.com/watch?v=6FVulnc4poc">
@@ -30,9 +33,6 @@
     <a href="https://www.youtube.com/watch?v=Qu9Tyj3P_dQ">
     <img src="https://img.youtube.com/vi/Qu9Tyj3P_dQ/maxresdefault.jpg"
     </a>
-</div>
-<div class="categoria-vídeos">
-    #videos aqui
 </div>
 </Body>
 </html>
