--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </section>
 
 <section class="categoria">
-<h2>lista de vídeos</h2>
+<h2>lista de videos</h2>
 
- <div class="categoria-vídeos"> 
+ <div class="categoria-videos"> 
     <a href="https://www.youtube.com/watch?v=tbQmx58VZAo">
     <img src="https://img.youtube.com/vi/tbQmx58VZAo/maxresdefault.jpg"/>
     <a href="https://www.youtube.com/watch?v=6FVulnc4poc">
@@ -31,8 +31,10 @@
     <a href="https://www.youtube.com/watch?v=1Cs5gg-1kYg">
     <img src="https://img.youtube.com/vi/1Cs5gg-1kYg/maxresdefault.jpg"/>
     <a href="https://www.youtube.com/watch?v=Qu9Tyj3P_dQ">
-    <img src="https://img.youtube.com/vi/Qu9Tyj3P_dQ/maxresdefault.jpg"
+    <img src="https://img.youtube.com/vi/Qu9Tyj3P_dQ/maxresdefault.jpg"/>
     </a>
+
 </div>
+</section>
 </Body>
 </html>
